@@ -1,5 +1,10 @@
 2002-09-12  John Levon  <levon@movementarian.org>
 
+	* QMathDialog.h:
+	* QMathDialog.C: load icon palettes on demand
+ 
+2002-09-12  John Levon  <levon@movementarian.org>
+
 	* QMathDialog.C: get the scrollbars right on first show
  
 2002-09-11  John Levon  <levon@movementarian.org>
